syntax = "proto3";
package api;

service AirPlayManagement {
  rpc ToggleBroadcast (BroadcastRequest) returns (ManagementResponse) {}
  rpc ChangeServiceName (NameChangeRequest) returns (ManagementResponse) {}
  rpc ForwardToNodes(AddRemoveNodesRequest) returns (ManagementResponse) {}
  rpc RemoveForwardToNodes(AddRemoveNodesRequest) returns (ManagementResponse) {}
  rpc GetCurrentTrack(GetTrackRequest) returns (Track) {}
}

message AddRemoveNodesRequest {
repeated string ids = 1;
bool removeAll = 2;
}

message BroadcastRequest {
  bool shouldBroadcast = 1;
}

message NameChangeRequest {
  string newName = 1;
}

message GetTrackRequest {}

message Track {
  string artist = 1;
	string album = 2;
	string title = 3;
	bytes artwork = 4;
}

message ManagementResponse {
  int32 returnCode = 1;
  string message = 2;
}